buildscript {
    ext {
        set('springCloudVersion', "${springCloudVersion}")
    }

    repositories {
        mavenLocal()
        maven {
            credentials {
                username 'xrf'
                password 'xrf!!00'
            }
            url "https://nexus.xr-friends.com/repository/maven-releases/"
        }
        mavenCentral()
    }

    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
        classpath "io.spring.gradle:dependency-management-plugin:1.1.4"
    }
}


allprojects {
    group 'com.example.ecsp'
    version '0.0.1-RELEASE'
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'maven-publish'

    java {
        sourceCompatibility = '17'
    }

    repositories {
        mavenLocal()
        maven {
            credentials {
                username 'xrf'
                password 'xrf!!00'
            }
            url "https://nexus.xr-friends.com/repository/maven-releases/"
        }
        mavenCentral()
    }

    publishing {
        publications {
            library(MavenPublication) {
                from components.java
            }
        }
        repositories {
            maven {
                credentials {
                    username 'xrf'
                    password 'xrf!!00'
                }
                url "https://nexus.xr-friends.com/repository/maven-releases/"
            }
        }
    }

    dependencies {
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        testImplementation 'org.projectlombok:lombok'

        implementation "com.example.ecsp:common:0.0.1-RELEASE"
        implementation "com.example.ecsp:common-jpa:0.0.1-RELEASE"

        implementation 'com.google.code.findbugs:jsr305:3.0.2'
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
        }
    }

    test {
        useJUnitPlatform()
    }

    tasks.register("prepareKotlinBuildScriptModel"){}
}